force-app/main/default/objects/CARE_Tenant__c/CARE_Tenant__c.object-meta.xml
<CustomObject>
    <label>CARE Tenant</label>
    <nameField>
        <displayFormat>CT{000000000}</displayFormat>
        <label>NAME (Tenant No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Tenant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>