force-app/main/default/objects/CARE_Tenant__c/fields/ALSO_CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>ALSO_CUSTOMER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALSO CUSTOMER</label>
    <type>Checkbox</type>
</CustomField>