force-app/main/default/objects/CARE_Tenant__c/fields/CARE_Electric_EndDate__c.field-meta.xml
<CustomField>
    <fullName>CARE_Electric_EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electric EndDate</label>
    <type>Date</type>
</CustomField>