force-app/main/default/objects/CARE_Tenant__c/fields/CARE_Electric_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_Electric_SA_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Electric SA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>