force-app/main/default/objects/CARE_Tenant__c/fields/CARE_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>CARE_Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE Facility Name</label>
    <referenceTo>CARE_Facility__c</referenceTo>
    <relationshipLabel>CARE Tenant</relationshipLabel>
    <relationshipName>CARE_Tenant</relationshipName>
    <type>Lookup</type>
</CustomField>