force-app/main/default/objects/CARE_Tenant__c/fields/CARE_Gas_EndDate__c.field-meta.xml
<CustomField>
    <fullName>CARE_Gas_EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gas EndDate</label>
    <type>Date</type>
</CustomField>