force-app/main/default/objects/CARE_Tenant__c/fields/CARE_Gas_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CARE_Gas_StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gas StartDate</label>
    <type>Date</type>
</CustomField>