force-app/main/default/objects/CARE_Tenant__c/fields/CC_CODE__c.field-meta.xml
<CustomField>
    <fullName>CC_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>