force-app/main/default/objects/CARE_Tenant__c/fields/CERT_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>CERT_END_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CERT END DATE</label>
    <type>Date</type>
</CustomField>