force-app/main/default/objects/CARE_Tenant__c/fields/EI_Space_Location__c.field-meta.xml
<CustomField>
    <fullName>EI_Space_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EI Space Location</label>
    <referenceTo>EI_Space_Location__c</referenceTo>
    <relationshipLabel>CARE Tenant (EI Space Location)</relationshipLabel>
    <relationshipName>CARE_Tenant1</relationshipName>
    <type>Lookup</type>
</CustomField>