force-app/main/default/objects/CARE_Tenant__c/fields/ELEC_RS_CD__c.field-meta.xml
<CustomField>
    <fullName>ELEC_RS_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ELEC RS CD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>