force-app/main/default/objects/CARE_Tenant__c/fields/EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EXTERNAL ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>