force-app/main/default/objects/CARE_Tenant__c/fields/FACILITY__c.field-meta.xml
<CustomField>
    <fullName>FACILITY__c</fullName>
    <label>FACILITY</label>
    <referenceTo>CARE_Facility__c</referenceTo>
    <relationshipLabel>CARE Tenant (FACILITY)</relationshipLabel>
    <relationshipName>CARE_Tenant1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>