force-app/main/default/objects/CARE_Tenant__c/fields/GAS_ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>GAS_ACCT_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>GAS ACCT ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>