force-app/main/default/objects/CARE_Tenant__c/fields/GAS_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>GAS_SA_ID__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>GAS SA ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>