force-app/main/default/objects/CARE_Tenant__c/fields/HOME_ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>HOME_ADDRESS2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>HOME ADDRESS2</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>