force-app/main/default/objects/CARE_Tenant__c/fields/HOME_POSTAL__c.field-meta.xml
<CustomField>
    <fullName>HOME_POSTAL__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>HOME POSTAL</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>