force-app/main/default/objects/CARE_Tenant__c/fields/HOME_STATE__c.field-meta.xml
<CustomField>
    <fullName>HOME_STATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HOME STATE</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>