force-app/main/default/objects/CARE_Tenant__c/fields/HOMEPHONE__c.field-meta.xml
<CustomField>
    <fullName>HOMEPHONE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>HOMEPHONE</label>
    <type>Phone</type>
</CustomField>