force-app/main/default/objects/CARE_Tenant__c/fields/MAILING_CITY__c.field-meta.xml
<CustomField>
    <fullName>MAILING_CITY__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MAILING CITY</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>