force-app/main/default/objects/CARE_Tenant__c/fields/MAILING_POSTAL__c.field-meta.xml
<CustomField>
    <fullName>MAILING_POSTAL__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MAILING POSTAL</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>