force-app/main/default/objects/CARE_Tenant__c/fields/MAILING_STATE__c.field-meta.xml
<CustomField>
    <fullName>MAILING_STATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MAILING STATE</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>