force-app/main/default/objects/CARE_Tenant__c/fields/MOBILEPHONE__c.field-meta.xml
<CustomField>
    <fullName>MOBILEPHONE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MOBILEPHONE</label>
    <type>Phone</type>
</CustomField>