force-app/main/default/objects/CARE_Tenant__c/fields/PREFERRED_CONTACT_METHOD__c.field-meta.xml
<CustomField>
    <fullName>PREFERRED_CONTACT_METHOD__c</fullName>
    <label>PREFERRED CONTACT METHOD</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
                <default>true</default>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>