force-app/main/default/objects/CARE_Tenant__c/fields/TENANT_ID_CARE1__c.field-meta.xml
<CustomField>
    <fullName>TENANT_ID_CARE1__c</fullName>
    <label>TENANT ID CARE1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>