force-app/main/default/objects/CARE_Tenant__c/fields/TENANT_NAME__c.field-meta.xml
<CustomField>
    <fullName>TENANT_NAME__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>TENANT NAME</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>