force-app/main/default/objects/CARE_Tenant__c/fields/WORKPHONE__c.field-meta.xml
<CustomField>
    <fullName>WORKPHONE__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>WORKPHONE</label>
    <type>Phone</type>
</CustomField>